// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Progress base demo works fine 1`] = `
<base>
  <t-progress
    percentage="80"
  />
  <t-progress
    percentage="80"
    theme="plump"
  />
  <t-progress
    percentage="30"
    theme="circle"
  />
</base>
`;

exports[`Progress Progress circle demo works fine 1`] = `
<circle>
  <t-progress
    percentage="80"
    theme="circle"
  />
  <t-progress
    percentage="88"
    status="warning"
    theme="circle"
  />
  <t-progress
    percentage="88"
    status="error"
    theme="circle"
  />
  <t-progress
    percentage="88"
    status="success"
    theme="circle"
  />
</circle>
`;

exports[`Progress Progress custom demo works fine 1`] = `
<custom>
  <t-progress
    color="#CD04FF"
    percentage="88"
    tClassLabel="external-class-label"
    trackColor="#EAC9FF"
  />
  <t-progress
    percentage="88"
    tClassBar="external-class-bar"
  />
</custom>
`;

exports[`Progress Progress line demo works fine 1`] = `
<line>
  <t-progress
    percentage="80"
  />
  <t-progress
    percentage="88"
    status="warning"
  />
  <t-progress
    percentage="88"
    status="error"
  />
  <t-progress
    percentage="88"
    status="success"
  />
</line>
`;

exports[`Progress Progress plump demo works fine 1`] = `
<plump>
  <t-progress
    percentage="80"
    theme="plump"
  />
  <t-progress
    percentage="88"
    status="warning"
    theme="plump"
  />
  <t-progress
    percentage="88"
    status="error"
    theme="plump"
  />
  <t-progress
    percentage="88"
    status="success"
    theme="plump"
  />
</plump>
`;

exports[`Progress Progress transition demo works fine 1`] = `
<transition>
  <t-progress
    percentage="{{88}}"
  />
  <wx-view
    class="button-group"
  >
    <t-button
      size="small"
      theme="primary"
      variant="plain"
      bind:tap="clickReduce"
    >
      减少
    </t-button>
    <wx-view
      class="space"
    />
    <t-button
      size="small"
      theme="primary"
      bind:tap="clickAdd"
    >
      增加
    </t-button>
  </wx-view>
</transition>
`;
